--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-this is readme
-yes indeed 
-this is a readme
-welll daaaaaaaaaaaa
-but are you sure?
+whole team's final versions,
+I personally worked on billing folder
+presentation of our team - 'billing presentation.pptx'
